--- a/app/src/main/res/layout/fragment_button.xml
+++ b/app/src/main/res/layout/fragment_button.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!--<FrameLayout-->
+<!--<LinearLayout-->
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,22 +14,60 @@
     android:weightSum="2"
     android:padding="@dimen/normal_padding">
 
+
     <Button
         android:id="@+id/buttonTakePhoto"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="300dp"
+        android:layout_gravity="center_vertical"
         android:text="@string/make_photo"
         android:textSize="@dimen/normal_text_size"
-        android:layout_gravity="center_vertical" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonChoosePhotoFromStorage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonChoosePhotoFromStorage"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="300dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="42dp"
         android:text="@string/get_photo"
         android:textSize="@dimen/normal_text_size"
-        android:layout_gravity="center_vertical" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonTakePhoto" />
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBarWaitForResult"
+        style="@style/MyProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+<!--        <Button-->
+<!--            android:id="@+id/show_dialog_btn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Show Document scanner" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/import_image"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Import image" />-->
+
+
+<!--    <ImageView-->
+<!--        android:id="@+id/import_result"-->
+<!--        android:layout_width="150dp"-->
+<!--        android:layout_height="150dp"-->
+<!--        android:layout_gravity="bottom|right" />-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
