--- a/app/src/main/res/layout/fragment_image_result.xml
+++ b/app/src/main/res/layout/fragment_image_result.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--<FrameLayout-->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,15 +10,33 @@
     android:layout_width="match_parent"
     tools:context=".ui.fragments.ImageResultFragment">
 
-    <com.github.chrisbanes.photoview.PhotoView
+<!--    <com.github.chrisbanes.photoview.PhotoView-->
+<!--        android:id="@+id/imageViewResultImage"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        tools:layout_editor_absoluteY="200dp" />-->
+
+
+
+
+<!--    <io.scanbot.sdk.docdetection.ui.DocumentScannerView-->
+<!--        android:id="@+id/document_scanner_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
+
+
+    <ImageView
         android:id="@+id/imageViewResultImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="200dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButtonClose"
@@ -41,29 +61,28 @@
             android:id="@+id/buttonSeeSkan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/scan_image"
             android:textAllCaps="false"
             android:visibility="gone"
             android:layout_marginRight="@dimen/normal_padding"
             android:layout_marginLeft="@dimen/normal_padding"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/buttonIsScan"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
-        <Button
-            android:id="@+id/buttonIsScan"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:visibility="gone"
-            android:text="@string/seek_text"
-            android:textAllCaps="false"
-            android:layout_marginLeft="@dimen/normal_padding"
-            android:layout_marginRight="@dimen/normal_padding"/>
+<!--        <Button-->
+<!--            android:id="@+id/buttonIsScan"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:visibility="gone"-->
+<!--            android:text="@string/seek_text"-->
+<!--            android:textAllCaps="false"-->
+<!--            android:layout_marginLeft="@dimen/normal_padding"-->
+<!--            android:layout_marginRight="@dimen/normal_padding"/>-->
 
     </LinearLayout>
 
